--- a/src/sidepanel/index.html
+++ b/src/sidepanel/index.html
@@ -6,7 +6,7 @@
     <title>8G Extension - Side Panel</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="app"></div>
     <script type="module" src="./main.tsx"></script>
   </body>
 </html>
